--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "es6-promise": "^4.2.8",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-persistent-state": "^0.2.1",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@mdi/font": "^6.5.95",
